--- a/views/panel.pug
+++ b/views/panel.pug
@@ -31,4 +31,4 @@ block content
                 span(id='same-energy')
             p Przy zmianie cen energii o spodziewane 40%: 
                 span(id='changed-energy')
-  
+  script(src="javascripts/calculator.js")
