experts routing added

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html
             a(href="/panel") Kalkulator                 
         li 
           i(class="fas fa-file-invoice-dollar")
-            a(href="/panel")  Handlowcy  
+            a(href="/panel/experts")  Handlowcy  
                    
         li 
           i(class="fas fa-skull-crossbones") 
