--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,5 +20,8 @@ html
         li 
           i(class="fas fa-rss")
             a(class='disabled')  Aktualności
+        li 
+          i(class="fas fa-crown")
+            a(class='disabled')  E-Tablica
           
     block content
