--- a/views/experts.pug
+++ b/views/experts.pug
@@ -3,4 +3,87 @@ extends layout
 block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
-  h1 Eksperci - tabela
+  h1(class='experts-heading') Eksperci - tabela
+  div(class="experts-wrapper")
+    table(class='experts-table')
+      tr
+        th Imię i Nazwisko 
+        th Kiedy dzwoni
+        th Nr telefonu
+        th Email
+        th Miasto początkowe
+        th Obsługiwane powiaty
+        th Dodatkowe info
+      tr
+        td Sylwia Pasik
+        td Dzień wcześniej
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Łukasz Malinowski
+        td Tego samego dnia
+        td -
+        td -
+        td -
+        td -
+        td Piątki spotkania max do 14
+      tr
+        td Mariusz Grzejszczyk
+        td Jak chce klient
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Adam Rudnik
+        td Tego samego dnia
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Stanisław Serkowski
+        td Tego samego dnia
+        td -
+        td -
+        td -
+        td -
+        td Można ładować Soboty
+      tr
+        td Krzysztof Węgiełek
+        td Jak chce klient
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Grzegorz Branica
+        td Jak chce klient
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Arkadiusz Śmiech
+        td Tego samego dnia
+        td -
+        td -
+        td -
+        td -
+        td -
+      tr
+        td Monika Nowińska
+        td Tego samego dnia
+        td -
+        td -
+        td -
+        td -
+        td -
+    
