probably last commit, becouse lack of interest

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,6 +78,10 @@ body {
   padding: 5px;
 }
 
+.main-nav li a:hover {
+  color: black;
+}
+
 .main-nav li a {
   text-decoration: none;
   color: white;
