--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,10 +13,10 @@ html
           a(href="/panel/experts")  Handlowcy  
                    
         li 
-          a( class='disabled')  Rezygnacje          
+          a(class='disabled')  Rezygnacje          
         li 
           a(class='disabled')  Aktualności
         li 
-          a(class='disabled')  E-Tablica
+          a(href="/panel/table")  E-Tablica
           
     block content
