--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -207,3 +207,69 @@ table.experts-table tr:hover {
   background-color: black;
   color: white;
 }
+
+/* sekcja e-tablica */
+h1.table-heading {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+div.table-wrapper {
+  background-color: rgba(0, 188, 212, 0.55);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+div.person {
+  background: rgba(255, 255, 255, 0.86);
+  width: 80%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0px auto 3px;
+  font-size: 20px;
+  font-weight: bolder;
+  display: flex;
+  position: relative;
+}
+
+span.points {
+  display: block;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background-color: white;
+  text-align: center;
+  margin-right: 10px;
+}
+
+p.name {
+  line-height: 30px;
+}
+
+div.pointsPanel {
+  display: flex;
+  position: absolute;
+  right: 5px;
+}
+
+div.pointsPanel span.plus,
+div.pointsPanel span.minus {
+  display: block;
+  width: 25px;
+  height: 25px;
+  border: 1px solid black;
+  text-align: center;
+  line-height: 25px;
+  background: black;
+  color: white;
+  margin-left: 2px;
+  border-radius: 1px;
+  cursor: pointer;
+  transition: .2s;
+}
+
+div.pointsPanel span.plus:hover,
+div.pointsPanel span.minus:hover {
+  background: gray;
+}
