backend is ready for table, need to finish front

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -273,3 +273,7 @@ div.pointsPanel span.plus:hover,
 div.pointsPanel span.minus:hover {
   background: gray;
 }
+
+div.person.winner {
+  background: yellow;
+}
