--- a/views/table.pug
+++ b/views/table.pug
@@ -10,5 +10,5 @@ block content
         span(class="points")=item.points
         p(class="name")=item.name
         div(class="pointsPanel")          
-          span(class="plus" data-operation="plus" data-id=item.id) +
-          span(class="minus" data-operation="minus" data-id=item.id) -      
+         a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
+         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -      
