--- a/views/table.pug
+++ b/views/table.pug
@@ -5,10 +5,13 @@ block content
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica
   div(class="table-wrapper")
-    each item in data     
+    each item in dataMod     
       div(class='person')
         span(class="points")=item.points
         p(class="name")=item.name
         div(class="pointsPanel")          
          a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
-         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -      
+         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -
+         a(href=`/panel/table/minus/${item.id}/1` class="minus" data-operation="minus" data-id=item.id) R
+    
+        
