--- a/views/table.pug
+++ b/views/table.pug
@@ -5,8 +5,10 @@ block content
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica
   div(class="table-wrapper")
+    
     each item in dataMod     
-      div(class='person')
+      div(data-position=`${position++}` class=`${item.points > 0 && position == 0 ? "person winner" : "person"}`)
+        img(data-position=`${position++}` src="/images/crown.png" class=`${item.points > 0 && position == 1 ? "crown" : "crown disabled"}`)
         span(class="points")=item.points
         p(class="name")=item.name
         div(class="pointsPanel")          
