--- a/public/stylesheets/old_style.css
+++ b/public/stylesheets/old_style.css
@@ -8,28 +8,13 @@ body {
   height: 100vh;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url("../images/photovoltaic.jpg");
+  background: url('../images/photovoltaic.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-body .logout-btn {
-  position: fixed;
-  top: 5px;
-  right: 5px;
-  width: 130px;
-  height: 35px;
-  font-size: 20px;
-  background-color: #49cb4e;
-  color: white;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: .3s;
-}
-
-body .login-wrapper {
+.login-wrapper {
   width: 450px;
   height: 500px;
   border: 1px solid #9f9b9b;
@@ -40,19 +25,19 @@ body .login-wrapper {
   background: rgba(255, 255, 255, 0.84);
 }
 
-body .login-wrapper input {
+.login-wrapper input {
   display: block;
   margin: 30px auto 0;
   font-size: 25px;
 }
 
-body .login-wrapper .submit-btn,
-body .login-wrapper .logout-btn {
+.login-wrapper .submit-btn,
+.logout-btn {
   margin-top: 50px;
   width: 130px;
   height: 35px;
   font-size: 20px;
-  background-color: #49cb4e;
+  background-color: rgb(73, 203, 78);
   color: white;
   border: none;
   border-radius: 12px;
@@ -60,46 +45,56 @@ body .login-wrapper .logout-btn {
   transition: .3s;
 }
 
-body .login-wrapper .submit-btn:hover,
-body .login-wrapper .logout-btn:hover {
+.logout-btn {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  margin-top: 0;
+}
+
+.login-wrapper .submit-btn:hover,
+.logout-btn:hover {
   box-shadow: inset 1px 1px 10px 0px;
 }
 
-body .main-nav {
+/* css nawigacja */
+.main-nav {
   position: fixed;
   top: 5px;
   left: 50%;
   transform: translateX(-50%);
-  background: #259d2a;
+
+  background: rgb(37, 157, 42);
   color: white;
 }
 
-body .main-nav ul {
+.main-nav ul {
   display: flex;
   list-style: none;
 }
 
-body .main-nav ul li {
+.main-nav li {
   border-right: 2px solid white;
   padding: 5px;
 }
 
-body .main-nav ul li a {
+.main-nav li a:hover {
+  color: black;
+}
+
+.main-nav li a {
   text-decoration: none;
   color: white;
   font-size: 20px;
 }
 
-body .main-nav ul li a:hover {
-  color: black;
-}
-
-body .main-nav ul li a.disabled {
+.main-nav li a.disabled {
   text-decoration: line-through;
   cursor: default;
 }
 
-body .wrapper {
+/* doklejony CSS */
+.wrapper {
   width: 800px;
   height: 500px;
   margin: 50px auto 0;
@@ -111,20 +106,20 @@ body .wrapper {
   font-family: Arial, sans-serif;
 }
 
-body .wrapper h3 {
+.wrapper h3 {
   text-align: center;
   color: #830707;
 }
 
-body .wrapper input {
+.wrapper input {
   font-size: 20px;
 }
 
-body .wrapper p {
+.wrapper p {
   margin-top: 10px;
 }
 
-body .wrapper button {
+.wrapper button {
   display: inline-block;
   width: 100px;
   box-sizing: border-box;
@@ -135,95 +130,98 @@ body .wrapper button {
   cursor: pointer;
 }
 
-body .wrapper button:hover {
+.wrapper button:hover {
   font-weight: bolder;
 }
 
-body .wrapper #select {
+.wrapper #select {
   margin-top: 10px;
   font-size: 20px;
 }
 
-body .wrapper #yearIn,
-body .wrapper #power,
-body .wrapper #monthCost,
-body .wrapper #same-energy,
-body .wrapper #changed-energy {
+.wrapper #yearIn,
+.wrapper #power,
+.wrapper #monthCost,
+.wrapper #same-energy,
+.wrapper #changed-energy {
   color: green;
   font-weight: bolder;
 }
 
-body .wrapper #same-energy.active,
-body .wrapper #changed-energy.active {
+.wrapper #same-energy.active,
+.wrapper #changed-energy.active {
   display: inline-block;
   padding: 2px 4px;
   border: 2px solid blue;
 }
 
-body .wrapper #creditPar {
+.wrapper #creditPar {
   color: green;
   font-weight: bolder;
   margin-bottom: 0;
 }
 
-body .wrapper #creditPar .orient {
+.wrapper #creditPar .orient {
   text-decoration: underline;
 }
 
-body .wrapper #save-money {
+.wrapper #save-money {
   margin-top: 10px;
 }
 
-body .wrapper #save-money .saves {
+.wrapper #save-money .saves {
   margin-bottom: 0;
 }
 
-body .wrapper #save-money .saves-desc,
-body .wrapper .credit-desc {
+.wrapper #save-money .saves-desc,
+.wrapper .credit-desc {
   margin-top: 0;
   font-size: 15px;
 }
 
-body h1.experts-heading {
+/* sekcja handlowcy */
+h1.experts-heading {
   text-align: center;
   margin-bottom: 5px;
 }
 
-body table.experts-table {
+table.experts-table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
   background: white;
 }
 
-body table.experts-table td,
-body table.experts-table th {
+table.experts-table td,
+table.experts-table th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
 }
 
-body table.experts-table tr:nth-child(even) {
+table.experts-table tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-body table.experts-table tr:hover {
+table.experts-table tr:hover {
   background-color: black;
   color: white;
 }
 
-body h1.table-heading {
+/* sekcja e-tablica */
+h1.table-heading {
   text-align: center;
   margin-bottom: 10px;
 }
 
-body div.table-wrapper {
+div.table-wrapper {
   background-color: rgba(0, 188, 212, 0.55);
   padding: 10px;
   border-radius: 5px;
+
 }
 
-body div.person {
+div.person {
   background: rgba(255, 255, 255, 0.86);
   width: 80%;
   border-radius: 10px;
@@ -235,12 +233,7 @@ body div.person {
   position: relative;
 }
 
-body div.person.winner {
-  background: yellow;
-  position: relative;
-}
-
-body span.points {
+span.points {
   display: block;
   border-radius: 50%;
   width: 30px;
@@ -251,18 +244,18 @@ body span.points {
   margin-right: 10px;
 }
 
-body p.name {
+p.name {
   line-height: 30px;
 }
 
-body div.pointsPanel {
+div.pointsPanel {
   display: flex;
   position: absolute;
   right: 5px;
 }
 
-body div.pointsPanel a.plus,
-body div.pointsPanel a.minus {
+div.pointsPanel a.plus,
+div.pointsPanel a.minus {
   display: block;
   width: 25px;
   height: 25px;
@@ -278,12 +271,17 @@ body div.pointsPanel a.minus {
   text-decoration: none;
 }
 
-body div.pointsPanel a.plus:hover,
-body div.pointsPanel a.minus:hover {
+div.pointsPanel a.plus:hover,
+div.pointsPanel a.minus:hover {
   background: gray;
 }
 
-body img.crown {
+div.person.winner {
+  background: yellow;
+  position: relative;
+}
+
+img.crown {
   width: 80px;
   position: absolute;
   transform: rotateZ(-17deg);
@@ -292,6 +290,6 @@ body img.crown {
   top: -33px;
 }
 
-body img.crown.disabled {
+img.crown.disabled {
   display: none;
 }
