new section add, form is sending msg to data base, but only if everything is compleate, probobly need to check in models

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,11 +12,12 @@ html
         li 
           a(href="/panel/experts")  Handlowcy  
         li 
-          a(href="/panel/table")  E-Tablica           
+          a(href="/panel/table")  E-Tablica  
+        li 
+          a(href="/panel/news")  Aktualności         
         li 
           a(class='disabled')  Rezygnacje          
-        li 
-          a(class='disabled')  Aktualności
+        
        
           
     block content
