--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,8 @@ html
         li 
           a(href="/panel/table")  E-Tablica  
         li 
-          a(href="/panel/news")  Aktualności         
+          //- a(href="/panel/news")  Aktualności  
+          a(class='disabled')  Aktualności      
         li 
           a(class='disabled')  Rezygnacje          
         
