--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -8,6 +8,26 @@ div.table-wrapper {
     padding: 10px;
     border-radius: 5px;
 
+    div.sum {
+        height: 50px;
+        text-align: right;
+        font-size: 30px;
+        font-size: bolder;
+        color: white;
+        position: relative;
+
+        P {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 2px;
+            width: 140px;
+            text-align: center;
+            background: rgba(17, 17, 17, 0.658);
+            border-radius: 10px;
+        }
+
+    }
 }
 
 div.person {
