--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,10 +14,11 @@ html
         li 
           a(href="/panel/table")  E-Tablica  
         li 
+           a(href="/panel/necessary") Przydatne 
+        li 
           //- a(href="/panel/news")  Aktualności  
           a(class='disabled')  Aktualności      
-        li 
-          a(class='disabled')  Rezygnacje          
+                 
         
        
           
