--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,10 @@ body .logout-btn {
   transition: .3s;
 }
 
+body .logout-btn:hover {
+  box-shadow: inset 1px 1px 10px 0px;
+}
+
 body .login-wrapper {
   width: 450px;
   height: 500px;
@@ -66,6 +70,30 @@ body .login-wrapper .logout-btn:hover {
   box-shadow: inset 1px 1px 10px 0px;
 }
 
+body div.menu-mobile {
+  display: none;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 5px;
+  top: 5px;
+  z-index: 1;
+}
+
+@media (max-width: 600px) {
+  body div.menu-mobile {
+    display: block;
+  }
+}
+
+body div.menu-mobile i {
+  font-size: 50px;
+}
+
+body div.menu-mobile i.active {
+  transform: rotateX(180deg);
+}
+
 body .main-nav {
   position: fixed;
   top: 5px;
@@ -75,9 +103,22 @@ body .main-nav {
   color: white;
 }
 
+@media (max-width: 541px) {
+  body .main-nav {
+    top: -400px;
+    transition: .3s;
+  }
+}
+
 body .main-nav ul {
   display: flex;
   list-style: none;
+}
+
+@media (max-width: 600px) {
+  body .main-nav ul {
+    flex-direction: column;
+  }
 }
 
 body .main-nav ul li {
@@ -85,10 +126,67 @@ body .main-nav ul li {
   padding: 5px;
 }
 
+@media (max-width: 1024px) {
+  body .main-nav ul li {
+    width: 180px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  body .main-nav ul li {
+    width: 140px;
+  }
+}
+
+@media (max-width: 830px) {
+  body .main-nav ul li {
+    width: 140px;
+  }
+}
+
+@media (max-width: 670px) {
+  body .main-nav ul li {
+    width: 125px;
+  }
+}
+
+@media (max-width: 600px) {
+  body .main-nav ul li {
+    width: 260px;
+    border-right: none;
+    border-bottom: 2px solid white;
+  }
+}
+
 body .main-nav ul li a {
   text-decoration: none;
   color: white;
   font-size: 20px;
+}
+
+@media (max-width: 1024px) {
+  body .main-nav ul li a {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  body .main-nav ul li a {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 830px) {
+  body .main-nav ul li a {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  body .main-nav ul li a {
+    font-size: 25px;
+  }
 }
 
 body .main-nav ul li a:hover {
