--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -1,3 +1,5 @@
+@import "./mixins";
+
 h1.table-heading {
     text-align: center;
     margin-bottom: 10px;
@@ -101,4 +103,42 @@ img.crown {
 
 img.crown.disabled {
     display: none;
+}
+
+.close-session {
+    display: block;
+    @include mainBtn;
+    padding: 10px;
+    width: 170px;
+    line-height: 10px;
+    margin: 10px auto;
+    background: rgb(196, 15, 15);
+
+}
+
+.close-session.yes {
+    text-decoration: none;
+    background: rgb(73, 203, 78);
+}
+
+
+div.confirm-close-session {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    width: 30vw;
+    height: auto;
+    padding: 20px;
+    border: 3px solid green;
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 16px;
+    line-height: 120%;
+}
+
+div.confirm-close-session.active {
+    display: block;
 }
