--- a/views/table.pug
+++ b/views/table.pug
@@ -13,9 +13,14 @@ block content
         p(class="name")=item.name
         div(class="pointsPanel")          
          a(href=`/panel/table/add/${item.id}/${item.points}` class="plus" data-operation="plus" data-id=item.id) +
-         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -
-         a(href=`/panel/table/minus/${item.id}/1` class="minus" data-operation="minus" data-id=item.id) R
+         a(href=`/panel/table/minus/${item.id}/${item.points}` class="minus" data-operation="minus" data-id=item.id) -         
     div(class="sum")
       p(class="score-number")=`Suma: ${allScore}`
-    
+      //- stwórz byn który będzie miał w właściwości len dataMod.length ;)
+    button(id="close-session-btn" class="close-session") Zamknij sesję
+    div(class="confirm-close-session")
+      p Czy jesteś pewna/-y, że chcesz zamknąć sesję? Spowoduje to wyzerowanie wyników na tablicy dobowej i przeniesienie ich do zestawień tygodniowych i miesięcznych. [wyświetlane będą już niebawem]
+      a(class="close-session yes" href="table/close-session/") Potwierdzam
+      buton(class="close-session no") Innym razem
+  script(src="/javascripts/table.js")
         
