--- a/public/stylesheets/parts/_nav.scss
+++ b/public/stylesheets/parts/_nav.scss
@@ -27,6 +27,7 @@ div.menu-mobile {
     top: 5px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 10;
 
     @include common {
         top: -400px;
