--- a/views/table.pug
+++ b/views/table.pug
@@ -33,8 +33,10 @@ block content
       table
         tr
           th Imię i nazwisko
-          th Spotkań
-          th Kasiorka(netto)
+          th
+            i(class="fas fa-handshake")
+          th
+            i(class="fas fa-coins")  (Netto)
         each item in dataModWeek
           tr
             td=item.name
@@ -50,8 +52,10 @@ block content
       table
         tr
           th Imię i nazwisko
-          th Spotkań
-          th Kasiorka(netto)
+          th
+            i(class="fas fa-handshake")
+          th
+            i(class="fas fa-coins")  (Netto)
         each item in dataModMonth
           tr
             td=item.name
