christmas scss update

--- a/public/stylesheets/parts/_nav.scss
+++ b/public/stylesheets/parts/_nav.scss
@@ -34,7 +34,8 @@ div.menu-mobile {
         transition: .3s;
     }
 
-    background: rgb(37, 157, 42);
+    // background: rgb(37, 157, 42);
+    background: rgba(154, 12, 12, 0.11);
     color: white;
 
     ul {
