--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,7 +10,8 @@ body {
     height: 100vh;
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background: url('../images/photovoltaic.jpg');
+    // up świąteczny 
+    background: url('../images/photovoltaic1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
