--- a/public/stylesheets/parts/_nav.css
+++ b/public/stylesheets/parts/_nav.css
@@ -28,7 +28,7 @@ div.menu-mobile i.active {
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
-  background: #259d2a;
+  background: rgba(154, 12, 12, 0.11);
   color: white;
 }
 
