--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -3,10 +3,12 @@
 h1.table-heading {
     text-align: center;
     margin-bottom: 10px;
+    color: white;
 }
 
 div.table-wrapper {
-    background-color: rgba(0, 188, 212, 0.55);
+    // background-color: rgba(0, 188, 212, 0.55);
+    background-color: rgba(255, 255, 253, 0.7);
     padding: 10px;
     border-radius: 5px;
 
