--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
   height: 100vh;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url("../images/photovoltaic.jpg");
+  background: url("../images/photovoltaic1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -126,7 +126,7 @@ body .main-nav {
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
-  background: #259d2a;
+  background: rgba(154, 12, 12, 0.11);
   color: white;
 }
 
@@ -343,10 +343,11 @@ body table.experts-table tr:hover {
 body h1.table-heading {
   text-align: center;
   margin-bottom: 10px;
+  color: white;
 }
 
 body div.table-wrapper {
-  background-color: rgba(0, 188, 212, 0.55);
+  background-color: rgba(255, 255, 253, 0.7);
   padding: 10px;
   border-radius: 5px;
 }
