half work of count to party and christmas

--- a/public/stylesheets/parts/_nav.css
+++ b/public/stylesheets/parts/_nav.css
@@ -120,7 +120,7 @@ div.menu-mobile i.active {
 }
 
 .main-nav ul li a:hover {
-  color: black;
+  border-bottom: 2px solid white;
 }
 
 .main-nav ul li a.disabled {
