--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -218,7 +218,7 @@ body .main-nav ul li a {
 }
 
 body .main-nav ul li a:hover {
-  color: black;
+  border-bottom: 2px solid white;
 }
 
 body .main-nav ul li a.disabled {
@@ -517,6 +517,30 @@ body div.table-old-wrapper div.table-month h2 {
 body div.table-old-wrapper div.table-week a {
   text-decoration: none;
   color: white;
+}
+
+body .party-time,
+body .christmas-time {
+  background-color: rgba(255, 255, 253, 0.7);
+  padding: 10px;
+  border-radius: 5px;
+  width: 250px;
+  text-align: center;
+  position: fixed;
+  top: 0px;
+}
+
+body .party-time p,
+body .christmas-time p {
+  margin: 0;
+}
+
+body .party-time {
+  left: 20px;
+}
+
+body .christmas-time {
+  right: 150px;
 }
 
 body div.necessary-wrapper {
