--- a/public/stylesheets/parts/_nav.scss
+++ b/public/stylesheets/parts/_nav.scss
@@ -97,7 +97,8 @@ div.menu-mobile {
                 }
 
                 &:hover {
-                    color: black;
+                    // color: black;
+                    border-bottom: 2px solid white;
                 }
             }
 
