--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -188,3 +188,28 @@ div.table-old-wrapper {
         }
     }
 }
+
+// święta
+
+.party-time,
+.christmas-time {
+    background-color: rgba(255, 255, 253, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    width: 250px;
+    text-align: center;
+    position: fixed;
+    top: 0px;
+
+    p {
+        margin: 0;
+    }
+}
+
+.party-time {
+    left: 20px;
+}
+
+.christmas-time {
+    right: 150px;
+}
