--- a/views/table.pug
+++ b/views/table.pug
@@ -4,6 +4,16 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica
+  div(class="party-time")
+    p(class="time-to") Mikołajki za:
+      span(class="days-party")
+      span(class="hours-party")
+      span(class="minutes-party")
+  div(class="christmas-time")
+    p(class="time-to") Święta za:
+      span(class="days-christmas")
+      span(class="hours-christmas")
+      span(class="minutes-christmas")
   div(class="table-wrapper")
   
     each item in dataModDay     
@@ -62,6 +72,7 @@ block content
             td=item.pointsMonth
             td=item.pointsMonth * 7
   script(src="/javascripts/table.js")
+  script(src="/javascripts/christmas.js")
   script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1")
   script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
