--- a/views/table.pug
+++ b/views/table.pug
@@ -37,6 +37,8 @@ block content
       form(action="table/close-session-week/")
         button(class="btn btn-success" type="submit") Potwierdzam 
       button(class="close-session-week no btn btn-danger") Innym razem
+    div(class="bell")
+      img(src="/images/bell.png")
   div(class='table-old-wrapper')
     div(class='table-week table table-hover table-dark')
       h2 Tabela tygodniowa
