--- a/public/stylesheets/parts/_table.scss
+++ b/public/stylesheets/parts/_table.scss
@@ -1,4 +1,5 @@
 @import "./mixins";
+@import url('https://fonts.googleapis.com/css?family=Anton&display=swap&subset=latin-ext');
 
 h1.table-heading {
     text-align: center;
@@ -11,6 +12,7 @@ div.table-wrapper {
     background-color: rgba(255, 255, 253, 0.7);
     padding: 10px;
     border-radius: 5px;
+    position: relative;
 
     div.sum {
         height: 50px;
@@ -158,7 +160,7 @@ div.confirm-close-session-week.active {
 }
 
 div.table-old-wrapper {
-    margin-top: 10px;
+    margin-top: 55px;
     // background: rgba(255, 255, 255, 0.86);
     display: flex;
     justify-content: center;
@@ -203,6 +205,8 @@ div.table-old-wrapper {
 
     p {
         margin: 0;
+        font-family: 'Anton', sans-serif;
+        letter-spacing: 1px;
     }
 }
 
@@ -212,4 +216,18 @@ div.table-old-wrapper {
 
 .christmas-time {
     right: 150px;
+}
+
+.bell {
+
+    width: 140px;
+    position: absolute;
+    bottom: -68px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    img {
+        width: 100%;
+    }
+
 }
