santa-hat added, before snow

--- a/public/stylesheets/parts/_table.css
+++ b/public/stylesheets/parts/_table.css
@@ -98,12 +98,12 @@ div.pointsPanel a.minus:hover {
 }
 
 img.crown {
-  width: 80px;
+  width: 60px;
   position: absolute;
-  transform: rotateZ(-17deg);
+  transform: rotateZ(-6deg);
   z-index: 1;
-  left: -26px;
-  top: -33px;
+  left: -27px;
+  top: -23px;
 }
 
 img.crown.disabled {
@@ -184,7 +184,8 @@ div.table-old-wrapper div.table-week a {
   background-color: rgba(255, 255, 253, 0.7);
   padding: 10px;
   border-radius: 5px;
-  width: 250px;
+  width: auto;
+  font-size: 15px;
   text-align: center;
   position: fixed;
   top: 0px;
@@ -193,8 +194,8 @@ div.table-old-wrapper div.table-week a {
 .party-time p,
 .christmas-time p {
   margin: 0;
-  font-family: 'Anton', sans-serif;
-  letter-spacing: 1px;
+  font-family: Arial;
+  font-weight: bolder;
 }
 
 .party-time {
