--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -441,12 +441,12 @@ body div.pointsPanel a.minus:hover {
 }
 
 body img.crown {
-  width: 80px;
+  width: 60px;
   position: absolute;
-  transform: rotateZ(-17deg);
+  transform: rotateZ(-6deg);
   z-index: 1;
-  left: -26px;
-  top: -33px;
+  left: -27px;
+  top: -23px;
 }
 
 body img.crown.disabled {
@@ -527,7 +527,8 @@ body .christmas-time {
   background-color: rgba(255, 255, 253, 0.7);
   padding: 10px;
   border-radius: 5px;
-  width: 250px;
+  width: auto;
+  font-size: 15px;
   text-align: center;
   position: fixed;
   top: 0px;
@@ -536,8 +537,8 @@ body .christmas-time {
 body .party-time p,
 body .christmas-time p {
   margin: 0;
-  font-family: 'Anton', sans-serif;
-  letter-spacing: 1px;
+  font-family: Arial;
+  font-weight: bolder;
 }
 
 body .party-time {
