--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,4 @@ block content
         input(id='username' type='text' placeholder='login' name="login")
         input(id='password' type='password' placeholder='hasło' name="password")
         button(class="submit-btn" type='submit') Zaloguj
+      script(src="/javascripts/snow.js")
