--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,6 +155,10 @@ body .main-nav ul li {
   padding: 5px;
 }
 
+body .main-nav ul li:nth-child(4) {
+  border-right: none;
+}
+
 @media (max-width: 1024px) {
   body .main-nav ul li {
     width: 180px;
