--- a/views/necessary.pug
+++ b/views/necessary.pug
@@ -14,3 +14,4 @@ block content
    div(class="img-prad-wrapper")
      
      img(src="http://nfosigw.gov.pl/gfx/nfosigw/userfiles/files/moj_prad/images/mojprad_head.jpg", alt="wypłaty z programu mój prąd")
+  script(src="/javascripts/snow.js")
