--- a/views/panel.pug
+++ b/views/panel.pug
@@ -34,3 +34,4 @@ block content
                 span(id='changed-energy')
         
   script(src="javascripts/calculator.js")
+  script(src="/javascripts/snow.js")
